--- a/project/icore/WebContent/get_started.html
+++ b/project/icore/WebContent/get_started.html
@@ -25,7 +25,7 @@
         <p> Welcome to iCoRe! iCoRe was designed to provide fast, intuitive, and scalable access to the <a href="https://www.gdeltproject.org/" target="_blank" style="color:#ff7f7f;text-decoration:none">Global Database of Events, Language and Tone</a> (GDELT).
             The primary goal of iCoRe is the advancement of communication research centered around online news, event forecasting, and framing networks.
             This tutorial provides a short documentation of how to use and get started with iCoRe. For a more detailed discussion of iCoRe's features, capabilities, and applications,
-        we recommend users to read the respective <a href="#" style="color:#ff7f7f;text-decoration:none">companion paper</a>.</p>
+        we recommend users to read the respective <a href="#" style="color:#ff7f7f;text-decoration:none">companion paper</a>. <br>iCoRe is under active development. A list of soon upcoming features can be obtained <a href="tickets.html" style="color:#ff7f7f;text-decoration:none">here.</a></p>
         <hr class="hr">
         <h3>Technical Backend</h3>
         <p> iCoRe is based on a distributed database (Apache Cassandra) across a virtual cluster provided by the Aristotle Cloud Federation.
