refinements on interface

--- a/project/icore/WebContent/analyze.html
+++ b/project/icore/WebContent/analyze.html
@@ -75,10 +75,10 @@
 </head>
 
 <body>
-<div class="header">
-    <h1 style="font-family: Ubuntu;font-size: 25px;font-style: normal;font-variant: normal;font-weight: lighter;margin: 0;line-height: 50px;vertical-align: middle;width: 26em; position: fixed; left: 33%;"><a href="index.html" style="color:#febf36;text-decoration:none">iCoRe - The GDELT Interface for Communication Research</a> </h1>
-</div>
-<div class="intro">
+<header>
+    <p></p> <a href="index.html" style="color:#febf36;text-decoration:none">iCoRe - The GDELT Interface for Communication Research</a> </p>
+</header>
+<div class="get_started">
     <h2>Query Dashboard</h2>
     <hr class="hr">
     <p> Please indicate whether you would like to query <b>news</b> metadata from the Global Knowledge Graph (GKG) or <b>event</b> metadata from the Event Database.</p>
@@ -113,11 +113,9 @@
     <h2>Analysis Dashboard</h2>
     <hr class="hr">
     <p>Coming soon!</p>
-
-    <div class="footer">
-        <p style="font-family: Ubuntu;font-size: 15px;font-style: normal;font-variant: normal;font-weight: lighter;margin: 0;line-height: 100px;vertical-align: middle;"> A project of the <a href="https://www.medianeuroscience.org/" style="color:#febf36;text-decoration:none">Media Neuroscience Lab</a> and <a href="https://federatedcloud.org/" style="color:#febf36;text-decoration:none">Aristotle Cloud Federation</a></p>
-    </div>
 </div>
-
+<div class="footer">
+    <p>Media Neuroscience Lab</a> and <a href="https://federatedcloud.org/" style="color:#febf36;text-decoration:none">Aristotle Cloud Federation</a></p>
+</div>
 </body>
 </html>
