--- a/project/icore/WebContent/index.html
+++ b/project/icore/WebContent/index.html
@@ -14,14 +14,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div class="header">
-		<h1 style="font-family: Ubuntu;font-size: 25px;font-style: normal;font-variant: normal;font-weight: lighter;margin: 0;line-height: 50px;vertical-align: middle;width: 26em; position: fixed; left: 33%;"><a href="index.html" style="color:#febf36;text-decoration:none">iCoRe - The GDELT Interface for Communication Research</a> </h1>
-	</div>
-    <img src="img/icore_graph.jpeg" alt="icore" style="width:280px;height:110px; position: relative; left: 33%;">
+	<header>
+		<p><a href="index.html" style="color:#febf36;text-decoration:none">iCoRe - The GDELT Interface for Communication Research</a> </p>
+	</header>
     <div class="intro">
+        <img src="img/icore_graph.jpeg" alt="icore" style="display: block; margin-left: auto; margin-right: auto; width: 30%;">
+        <br>
         <!--<h2>Welcome to iCoRe!</h2>-->
         <hr class="hr">
         <p> This project introduces the interface for Communication Research (iCoRe) to access, explore, and analyze the <a href="https://www.gdeltproject.org/" target="_blank" style="color:#ff7f7f;text-decoration:none">Global Database of Events, Language and Tone</a> (GDELT; Leetaru & Schrodt, 2013). GDELT provides a vast, open source, and constantly updated repository of online news and event metadata collected from tens of thousands of news outlets around the world. Despite GDELT’s promise for advancing communication science, its massive scale and complex data structures have hindered efforts of communication scholars aiming to access and analyze GDELT. We thus developed iCoRe, an easy-to-use web interface that (a) provides fast access to the data available in GDELT (b) shapes and processes GDELT for theory-driven applications within communication research and (c) enables replicability through transparent query and analysis protocols.</p>
+        <p style="font-size: 14px"> iCoRe is under active development. A list of soon upcoming features can be obtained <a href="tickets.html" style="color:#ff7f7f;text-decoration:none">here.</a></p>
         <p align="right"> <i><b>v0.1</b></i></p>
         <hr class="hr">
         <br>
@@ -33,10 +35,10 @@
         <br>
         <br>
         <hr class="hr">
-        <p style="font-size: 13px"> When using iCoRe, please consider citing this article:<br/><br/>Hopp, F. R., Schaffer, J., Fisher, J. T., Cornell, D., & Weber, R. (under review). iCoRe: The GDELT Interface for the Advancement of Communication Research. </p>
+        <!--<p style="font-size: 13px"> When using iCoRe, please consider citing this article: Hopp, F. R., Schaffer, J., Fisher, J. T., Cornell, D., & Weber, R. (under review). iCoRe: The GDELT Interface for the Advancement of Communication Research. </p>-->
     </div>
     <div class="footer">
-        <p style="font-family: Ubuntu;font-size: 15px;font-style: normal;font-variant: normal;font-weight: lighter;margin: 0;line-height: 100px;vertical-align: middle;"> A project of the <a href="https://www.medianeuroscience.org/" target="_blank" style="color:#febf36;text-decoration:none">Media Neuroscience Lab</a> and <a href="https://federatedcloud.org/" target="_blank" style="color:#febf36;text-decoration:none">Aristotle Cloud Federation</a>  </p>
+        <p> A project of the <a href="https://www.medianeuroscience.org/" target="_blank" style="color:#febf36;text-decoration:none">Media Neuroscience Lab</a> and <a href="https://federatedcloud.org/" target="_blank" style="color:#febf36;text-decoration:none">Aristotle Cloud Federation</a>  </p>
     </div>
 </body>
 </html>
