--- a/project/icore/WebContent/tickets.html
+++ b/project/icore/WebContent/tickets.html
@@ -19,7 +19,7 @@
 	<div class="header">
         <h1 style="font-family: Ubuntu;font-size: 25px;font-style: normal;font-variant: normal;font-weight: lighter;margin: 0;line-height: 50px;vertical-align: middle;width: 26em; position: fixed; left: 33%;"><a href="index.html" style="color:#febf36;text-decoration:none">iCoRe - The GDELT Interface for Communication Research</a> </h1>
 	</div>
-    <div class="intro">
+    <div class="get_started">
         <h3>Soon upcoming</h3>
         <hr class="hr">
         <h4>Global Knowledge Graph</h4>
