last interface addons before submission

--- a/project/icore/WebContent/get_started.html
+++ b/project/icore/WebContent/get_started.html
@@ -29,7 +29,7 @@
         <ol>
             <li> <a href="intro_query.html" style="color:#ff7f7f;text-decoration:none"> Query and Data Interpretation </a></li>
             <li> <a href="whitelist.html" style="color:#ff7f7f;text-decoration:none"> Source Whitelist </a></li>
-            <li> <a href="#" style="color:#ff7f7f;text-decoration:none"> Documentation of Variables </a></li>
+            <li> <a href="variables_documentation.html" style="color:#ff7f7f;text-decoration:none"> Documentation of Variables </a></li>
             <li> <a href="backend.html" style="color:#ff7f7f;text-decoration:none"> Technical Backend</a></li>
         </ol>
         <br>
