--- a/project/icore/WebContent/tickets.html
+++ b/project/icore/WebContent/tickets.html
@@ -16,9 +16,9 @@
 
 </head>
 <body>
-	<div class="header">
-        <h1 style="font-family: Ubuntu;font-size: 25px;font-style: normal;font-variant: normal;font-weight: lighter;margin: 0;line-height: 50px;vertical-align: middle;width: 26em; position: fixed; left: 33%;"><a href="index.html" style="color:#febf36;text-decoration:none">iCoRe - The GDELT Interface for Communication Research</a> </h1>
-	</div>
+<header>
+    <p><a href="index.html" style="color:#febf36;text-decoration:none">iCoRe - The GDELT Interface for Communication Research</a> </p>
+</header>
     <div class="get_started">
         <h3>Soon upcoming</h3>
         <hr class="hr">
@@ -41,6 +41,7 @@
         <hr class="hr">
         <h4>Miscellaneous</h4>
         <ul>
+            <li>Query protocols that allow a combined retrieval of GKG and EVENT records for insights into news-event careers</li>
             <li>Wider browser capability</li>
             <li>Queries spanning longer time periods</li>
             <li>Design refinements to allow absolute positioning across screens</li>
@@ -48,8 +49,9 @@
         </ul>
         <br>
         <hr class="hr">
-        <div class="footer">
-        <p style="font-family: Ubuntu;font-size: 15px;font-style: normal;font-variant: normal;font-weight: lighter;margin: 0;line-height: 100px;vertical-align: middle;"> A project of the <a href="https://www.medianeuroscience.org/" style="color:#febf36;text-decoration:none">Media Neuroscience Lab</a> and <a href="https://federatedcloud.org/" style="color:#febf36;text-decoration:none">Aristotle Cloud Federation</a>  </p>
+    </div>
+    <div class="footer">
+        <p> A project of the <a href="https://www.medianeuroscience.org/" style="color:#febf36;text-decoration:none">Media Neuroscience Lab</a> and <a href="https://federatedcloud.org/" style="color:#febf36;text-decoration:none">Aristotle Cloud Federation</a>  </p>
     </div>
 </body>
 </html>
