--- a/project/icore/WebContent/whitelist.html
+++ b/project/icore/WebContent/whitelist.html
@@ -24,7 +24,7 @@
         <div class="get_started">
             <h3>Source Whitelist</h3>
             <hr class="hr">
-            <p> Instead of querying all of the thousand sources monitored by GDELT, iCoRe is currently drawing on a specifically constructed and extendable whitelist of 111 international,
+            <p> Instead of querying all of the thousand sources monitored by GDELT, iCoRe is currently drawing on a specifically constructed, thoroughly validated, and extendable whitelist of 111 international,
                 major news outlets. The rationale behind pre-selecting major news sources is to exclude rather insignificant sources for large-scale communication research (i.e., sources with
                 a small audience) and to maintain a focus on news reporting, thereby excluding non-news websites (such as blogs or classified advertisements) that are also monitored by GDELT.
                 In addition, for each source, iCoRe provides its country of origin, whether it is state run or not, and its political orientation (conservative, centrist, liberal) - information
