added local js libraries

--- a/project/icore/WebContent/analyze.html
+++ b/project/icore/WebContent/analyze.html
@@ -14,8 +14,8 @@
 
     <!-- Set viewport scaling and zoom features -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="http://malsup.github.com/jquery.form.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.form.js"></script>
 
     <script>
         $(document).ready(function(){
