--- a/project/icore/WebContent/whitelist.html
+++ b/project/icore/WebContent/whitelist.html
@@ -13,8 +13,8 @@
 
     <!-- Set viewport scaling and zoom features -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="js/d3.v2.js"></script>
+    <script src="js/jquery.min.js"></script>
 
 </head>
 <body>
